--- a/styles3.css
+++ b/styles3.css
@@ -4,12 +4,7 @@ body {
     margin:20px;
 
 }
-.anchor {
 
-    text-align: right;
-    font-family: Arial, sans-serif; 
-    margin-bottom: 10px; 
-    }
 
 .link {
     margin-left:5px;
@@ -22,7 +17,7 @@ body {
 .google_logo{
     margin: 0 auto;
 }
-@media (min-width: 700px) {
+@media (min-width: 900px) {
     .box {
         margin : 20px;
         height:44px;
@@ -31,17 +26,29 @@ body {
         border-radius: 25px;
         padding: 20px;
     }
+
+    .anchor {
+        text-align: right;
+        font-family: Arial, sans-serif; 
+        margin-bottom: 10px; 
+        }
 }
-@media (max-width: 699px) {
+@media (max-width: 899px) {
     .box {
-        margin : 20px;
+        margin :  20px 0 20px 0;
         height:44px;
         width: 90%;
         flex: 100%;
         border-radius: 25px;
         padding: 20px;
     }
-} 
+    .anchor {
+        text-align: center;
+        font-family: Arial, sans-serif; 
+        margin-bottom: 10px; 
+        }
+}
+
 .box:hover {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12),0 10px 10px 0 rgba(0,0,0,0.10);
   }  
